Reset and Rebuild System: Database integrity, ML sync, and Frontend fixes